--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ webpackReacts/webpackInit/build/
 webpackReacts/Gugudan/node_modules
 webpackReacts/Gugudan/build
 
+webpackReacts/wordRelay/node_modules
