--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 .DS_STORE
-webpackReacts/webpackInit/node_modules
-webpackReacts/webpackInit/build/
-webpackReacts/Gugudan/node_modules
-webpackReacts/Gugudan/build
-
-webpackReacts/wordRelay/node_modules
+node_modules/
+build/
